  * Add missing source of debconf/confmodule in init.d/lvm-devices.
  * Reset partman-lvm/device_remove_lvm after asking in device_remove_lvm().
  * Use 255 as return code when user backs up in device_remove_lvm().
  * Use 99 as return code when partman needs to be restarted in
    device_remove_lvm() instead of doing it directly.
    Breaks: partman-partitioning (<< 62), partman-md (<< 43)

 -- Jérémy Bobbio <lunar@debian.org>  Thu, 21 Aug 2008 21:35:28 +0200

partman-lvm (63) unstable; urgency=low

  [ Jérémy Bobbio ]
  * Don't fiddle with label on devices of type loop (e.g. RAID or crypto) in
    update.d/lvm_sync_flag.  (Closes: #494910)

  [ Updated translations ]
  * Arabic (ar.po) by Ossama M. Khayat
  * Kurdish (ku.po) by Erdal Ronahi
  * Portuguese (Brazil) (pt_BR.po) by Felipe Augusto van de Wiel (faw)
  * Traditional Chinese (zh_TW.po) by Tetralet

 -- Jérémy Bobbio <lunar@debian.org>  Tue, 19 Aug 2008 17:32:40 +0000

partman-lvm (62) unstable; urgency=low

  [ Jérémy Bobbio ]
  * Fix size substitution when displaying partman-lvm/lvcreate_error.
  * Harmonize size specification used when creating new Logical Volumes:
     - lv_create() now uses extents instead of size,
     - lvm_size_from_human() has been renamed to lvm_extents_from_human(),
     - As extent sizes are specific to a given Volume Group,
       lvm_extents_from_human() take the VG name as its first argument.
    Breaks: partman-auto-lvm (<= 27)                         (Closes: #411943)
  * Preserve "align" capability in choose_partition/lvm/do_option.
    Requires cdebconf (>= 0.133).
  * Activate Volume Groups during partman initialization: like MD devices,
    there is now 2 different init.d scripts:
      - lvm-devices, run before parted, is responsible for scanning and
        activating Volume Groups,
      - lvm, run later, will ensure that Physical Volumes have "lvm" as
        method, and create free space for Logical Volumes if needed.