@@ -7,6 +7,8 @@ partman-lvm (64) UNRELEASED; urgency=low
   * Use 99 as return code when partman needs to be restarted in
     device_remove_lvm() instead of doing it directly.
     Breaks: partman-partitioning (<< 62), partman-md (<< 43)
+  * Don't prevent removal of Volume Group spaning on multiple disks if they
+    are present in partman-auto/disk (hence going to be cleaned up).
 
  -- Jérémy Bobbio <lunar@debian.org>  Thu, 21 Aug 2008 21:35:28 +0200
 
